<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmartShopper</string>
    <string name="signature_title">Подпись</string>
    <string name="reply_title">Ответ</string>
    <string name="messages_header">Сообщения</string>
    <string name="sync_header">Синхронизация</string>
    <string name="sync_title">Автосинхронизация</string>
    <string name="attachment_title">Вложения</string>
    <string name="attachment_summary_off">Вложения отключены</string>
    <string name="attachment_summary_on">Вложения включены</string>
    <string name="search_products_hint">Поиск товаров</string>
    <string name="search_description">Поиск</string>
    <string name="start_shopping_text">Начать покупки — отсканируйте QR-код на корзине</string>
    <string name="home">Главная</string>
    <string name="product_name_placeholder">что-то там</string>
    <string name="search">Поиск</string>
    <string name="cart">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="search_category">Поиск по категории</string>
    <string name="category">Категории товаров</string>
    <string name="not_connected">Похоже, вы не подключены к корзине... </string>
    <string name="email">Email</string>
    <string name="login">Войти</string>
    <string name="login1">Вход</string>
    <string name="login_en">Login</string>
    <string name="password">Пароль</string>
    <string name="no_account">Нет аккаунта? Зарегистрируйтесь </string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="have_account">Уже есть аккаунт? Войти</string>
    <string name="payment">Способы оплаты</string>
    <string name="payment_main">Сделать основным</string>
    <string name="add_card">Привязать карту</string>
    <string name="hello_blank_fragment">папапам</string>
    <string name="hello_fragment">\n"Версия приложения" \n"1.00"\n \n"Регион"\n "Беларусь" \n\n "Поступайте в "\n"Минский радиотехнический колледж"</string>
    <string name="name_options">Название опции</string>
    <string name="profilel">"Личный кабинет"</string>
    <string name="favorite">"Избранное"</string>
    <string name="options">"Опции"</string>
    <string name="registration_yes">Зарегистрироваться</string>
    <string name="list1">"Список покупок 1"</string>
    <string name="rename">"Переименовать"</string>
    <string name="my_card">Моя корзина</string>
    <string name="all">Итого: </string>
    <string name="delete">"Удалить"</string>
    <string name="sale">"Акция"</string>
    <string name="college">"Перейти на сайт"</string>
    <string name="add_in_lists">"Добавить в список покупок"</string>
    <string name="add_in_favorites">"Добавить в избранное"</string>
    <string name="college_url">https://mrk.bsuir.by/be/</string>
    <string name="or">"ИЛИ"</string>
</resources>
