<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@color/surface_white"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/search_products_hint"
            android:background="@color/bg_light"
            android:padding="8dp"
            android:textColor="@color/text_primary"
            android:inputType="text"
            android:autofillHints="search" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/search_description"
            android:src="@drawable/ic_search"
            app:tint="@color/icon_inactive" />
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/promoViewPager"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/scanQrButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"

        android:orientation="horizontal"
        android:gravity="center_vertical"

        android:background="@drawable/button_background_green"
        android:paddingHorizontal="24dp"
        android:paddingVertical="15dp"

        app:layout_constraintTop_toBottomOf="@id/promoViewPager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/scan_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/start_shopping_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/productRecyclerView"

    android:layout_width="0dp"
    android:layout_height="0dp"

    android:layout_marginTop="8dp"
    android:padding="8dp"
    android:clipToPadding="false"
    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
    app:spanCount="2"

    app:layout_constraintTop_toBottomOf="@id/scanQrButton"
    app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"

    tools:listitem="@layout/item_product"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        app:itemBackground="@drawable/nav_item_background"
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bg_light"
        app:itemActiveIndicatorStyle="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:itemIconTint="@color/icon_inactive"
        app:itemTextColor="@color/link_green"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
